Add colours and cards

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,13 @@
-.App,
-html,
-body,
 #root {
   text-align: center;
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: #282c34;
+  background: linear-gradient(
+    to top right,
+    #03045e 0%,
+    #0077b6 100%
+  );
 }
 
 .App-logo {
