--- a/src/StyleSheets/formSheet.css
+++ b/src/StyleSheets/formSheet.css
@@ -1,21 +1,27 @@
-.formHeading {
-  display: block;
-  width: 400px;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-.formBody {
-  display: block;
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 20px;
-  border-radius: 5px;
-}
-
 .formBox {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
 }
+
+.formBox > *{
+  background-color: #00bcd4;
+  border-radius: 13px 13px 0px 0px;
+}
+
+.formHeading {
+  display: block;
+  width: 400px;
+  padding: 20px;
+}
+
+.formBody {
+  display: block;
+  max-width: 100%;
+  min-height: 100vh;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 13px 0px 0px 0px;
+}
+
+
