--- a/src/StyleSheets/ExerciseCard.css
+++ b/src/StyleSheets/ExerciseCard.css
@@ -1,13 +1,14 @@
-
 .card {
+  display: flex;
+  gap: 17px;
   background-color: #b2ebf2;
-  padding: 15px;
+  padding: 10px;
   border-radius: 15px;
   margin-bottom: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.card h2 {
+.card h2, .card h3 {
   margin: 0 0 10px;
 }
 
@@ -15,8 +16,13 @@
   margin: 5px 0;
 }
 
+.details {
+  flex-grow: 1;
+  max-width: 135px;
+}
+
 textarea {
-  width: 100%;
+  flex-grow: 5;
   height: 80px;
   margin-top: 10px;
   border: none;
