--- a/src/StyleSheets/CustomTitleBar.css
+++ b/src/StyleSheets/CustomTitleBar.css
@@ -6,6 +6,9 @@
   color: white;
   padding: 8px;
   -webkit-app-region: drag;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
 .window-controls {
   -webkit-app-region: no-drag;
