--- a/src/Components/StyleSheets/ExerciseCard.css
+++ b/src/Components/StyleSheets/ExerciseCard.css
@@ -42,7 +42,7 @@
 
 .card {
   display: flex;
-  gap: 17px;
+  gap: 12px;
   background-color: #b2ebf2;
   padding: 10px;
   border-radius: 15px;
@@ -61,7 +61,8 @@
 
 .details {
   flex-grow: 1;
-  max-width: 135px;
+    max-width: 155px;
+    text-align: left;
 }
 
 textarea {
