--- a/src/Components/StyleSheets/ExerciseCard.css
+++ b/src/Components/StyleSheets/ExerciseCard.css
@@ -1,9 +1,8 @@
-.exerciseCard{
+.exerciseCard {
   position: relative;
 }
 
 .cardControls {
-
   /* -webkit-app-region: drag; */
   position: absolute;
   top: 5px;
@@ -12,7 +11,7 @@
   /* background-color: #aacbce; */
 }
 
-.cardControls > *{
+.cardControls > * {
   position: relative;
   height: 12px;
   width: 12px;
@@ -39,7 +38,6 @@
   height: 300px;
 }
 
-
 .card {
   display: flex;
   gap: 12px;
@@ -61,8 +59,9 @@
 
 .details {
   flex-grow: 1;
-    max-width: 155px;
-    text-align: left;
+  width: 155px;
+  max-width: 155px;
+  text-align: left;
 }
 
 textarea {
