--- a/src/Components/StyleSheets/PreviewTrainingSchedual.css
+++ b/src/Components/StyleSheets/PreviewTrainingSchedual.css
@@ -40,7 +40,7 @@
 .timeMark hr {
   margin: 0;
   width: -webkit-fill-available;
-  height: 0.5px;
+  height: 1px;
   background-color: white;
   border: 0;
   border-color: white;
@@ -49,12 +49,13 @@
 
 .exerciseTimeline {
   position: relative;
+  height: -webkit-fill-available;
 }
 
 .timeCards {
   position: absolute;
   width: -webkit-fill-available;
-  top: 22px;
+  top: 20px;
   left: 68px;
 
   pointer-events: none;
