--- a/src/Components/StyleSheets/ExerciseCard.css
+++ b/src/Components/StyleSheets/ExerciseCard.css
@@ -66,7 +66,7 @@
 
 textarea {
   flex-grow: 5;
-  height: 80px;
+  /* height: 80px; */
   margin-top: 10px;
   border: none;
   border-radius: 10px;
@@ -89,4 +89,8 @@ select {
   display: flex;
   gap: 10px;
   margin-top: 10px;
+}
+
+.newCard{
+  opacity: 0.65;
 }
